[package]
name = "eva-sdk"
version = "0.2.6"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "EVA ICS v4 SDK"
readme = "README.md"
keywords = ["eva-ics", "iot", "industrial", "scada", "cloud"]
repository = "https://github.com/eva-ics/eva4-sdk"

[package.metadata.docs.rs]
features = ["full", "openssl/vendored"]

[package.metadata.playground]
features = ["full", "openssl/vendored"]

[dependencies]
eva-sdk-derive = "0.1.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
busrt = { version = "0.4", features = ["full"] }
serde = { version = "1.0.143", features = ["derive", "rc"] }
tokio = { version = "1.20.1", features = ["full"] }
eva-common = { version = "0.2.7", features = ["acl", "events", "actions",
  "bus-rpc", "services", "registry", "extended-value", "payload", "logger"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
bmart = "0.2.2"
ttl_cache = "0.5.1"
hyper = { version = "0.14.18", features = ["client", "http1", "tcp"], optional = true }
hyper-tls = { version = "0.5.0", optional = true }
simple-pool = { version = "0.0.14", optional = true }
tokio-fd = "0.3.0"
libc = "0.2.126"
parking_lot = "0.12.1"
openssl = { version = "0.10.49", optional = true }

[features]
controller = []
pubsub = []
hmi = []
http = ["hyper", "hyper-tls", "simple-pool"]
full = ["controller", "pubsub", "http", "hmi"]
