[package]
name = "eva-sdk"
version = "0.3.44"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "EVA ICS v4 SDK"
readme = "README.md"
keywords = ["eva-ics", "iot", "industrial", "scada", "cloud"]
repository = "https://github.com/eva-ics/eva4-sdk"

[package.metadata.docs.rs]
features = ["full", "eva-common/openssl-no-fips"]

[package.metadata.playground]
features = ["full", "eva-common/openssl-no-fips"]

[dependencies]
eva-sdk-derive = "0.1.2"
uuid = { version = "1.1.2", features = ["serde"] }
busrt = { version = "0.4", features = ["ipc", "rpc"] }
serde = { version = "1.0.143", features = ["derive", "rc"] }
tokio = { version = "1.20.1", features = ["full"] }
eva-common = { version = "0.3.41", features = ["acl", "events", "actions",
  "bus-rpc", "services", "registry", "extended-value", "payload", "logger", "common-payloads"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
bmart = "0.2.2"
ttl_cache = "0.5.1"
hyper = { version = "0.14.18", features = ["client", "http1", "tcp"], optional = true }
hyper-tls = { version = "0.5.0", optional = true }
simple-pool = { version = "0.0.14", optional = true }
libc = "0.2.126"
parking_lot = "0.12.1"
openssl = { version = "0.10.49", optional = true }
glob-match = { version = "0.2.1", optional = true }
async-recursion = { version = "1.0.5", optional = true }
once_cell = "1.19.0"
async-trait = { version = "0.1.51" }

[target.'cfg(unix)'.dependencies]
tokio-fd = "0.3.0"

[features]
controller = []
pubsub = []
hmi = []
http = ["hyper", "hyper-tls", "simple-pool"]
full = ["controller", "pubsub", "http", "hmi", "fs"]
fs = ["async-recursion", "glob-match"]
